[gd_scene load_steps=4 format=3 uid="uid://4k4kx2hgh43g"]

[ext_resource type="Script" path="res://network-menu.gd" id="1_nbirv"]
[ext_resource type="Script" path="res://custom_resource/ServerInfo.gd" id="2_x1ulr"]

[sub_resource type="Resource" id="Resource_x1f5r"]
script = ExtResource("2_x1ulr")
name = "LocalHost"
address = "127.0.0.1:4350"
used_slots = 0
server_ping = 0

[node name="network-menu" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nbirv")
saved_servers = Array[ExtResource("2_x1ulr")]([SubResource("Resource_x1f5r")])

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="ServerList" type="ItemList" parent="VBoxContainer/HBoxContainer/MarginContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
allow_reselect = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2

[node name="InputName" type="LineEdit" parent="VBoxContainer/HBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
placeholder_text = "Name"

[node name="InputAddress" type="LineEdit" parent="VBoxContainer/HBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Address:Port"
context_menu_enabled = false
shortcut_keys_enabled = false

[node name="AddServer" type="Button" parent="VBoxContainer/HBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Add Server"

[node name="Host" type="Button" parent="VBoxContainer/HBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ServerInfoPanel" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="NameContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/MarginContainer/ServerInfoPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/MarginContainer/ServerInfoPanel/NameContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Name:"

[node name="Name" type="Label" parent="VBoxContainer/HBoxContainer/MarginContainer/ServerInfoPanel/NameContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "No Server Selected"

[node name="AddressContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/MarginContainer/ServerInfoPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/MarginContainer/ServerInfoPanel/AddressContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Address:"

[node name="Address" type="Label" parent="VBoxContainer/HBoxContainer/MarginContainer/ServerInfoPanel/AddressContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="PlayerContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/MarginContainer/ServerInfoPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/MarginContainer/ServerInfoPanel/PlayerContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Players:"

[node name="Players" type="Label" parent="VBoxContainer/HBoxContainer/MarginContainer/ServerInfoPanel/PlayerContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/MarginContainer/ServerInfoPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/MarginContainer/ServerInfoPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Ping:"

[node name="Ping" type="Label" parent="VBoxContainer/HBoxContainer/MarginContainer/ServerInfoPanel/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Delete" type="Button" parent="VBoxContainer/HBoxContainer/MarginContainer/ServerInfoPanel"]
modulate = Color(1, 0.129412, 0.109804, 1)
layout_mode = 2
size_flags_horizontal = 4
text = "Delete Server"

[node name="Spacer" type="Control" parent="VBoxContainer/HBoxContainer/MarginContainer/ServerInfoPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="Join" type="Button" parent="VBoxContainer/HBoxContainer/MarginContainer/ServerInfoPanel"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Join"

[connection signal="item_selected" from="VBoxContainer/HBoxContainer/MarginContainer2/VBoxContainer/ServerList" to="." method="_on_server_list_item_selected"]
[connection signal="text_changed" from="VBoxContainer/HBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer/InputName" to="." method="_validate_server_input" unbinds=1]
[connection signal="text_changed" from="VBoxContainer/HBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer/InputAddress" to="." method="_validate_server_input" unbinds=1]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer/AddServer" to="." method="_on_add_server_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/MarginContainer2/VBoxContainer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/MarginContainer/ServerInfoPanel/Delete" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/MarginContainer/ServerInfoPanel/Join" to="." method="_on_join_pressed"]
